# django-proj

./: README.md  db.sqlite3  pyproject.toml
movies/: admin.py  models.py  urls.py
movies/migrations/: 0001_initial.py
myproject/: settings.py  urls.py
templates/movies/: movie_list.html  movies.html
