[tool.poetry]
name = "pip install poetry"
version = "0.1.0"
description = ""
authors = ["Garanaurt <bnotchenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
